<resources>
    <string name="app_name">Baking App</string>

    <!--messages text-->
    <string name="ingredients_expand"> "expand ingredients"</string>
    <string name="ingredients_collapse"> "collapse"</string>
    <string name="ingredients_title"> "INGREDIENTS:"</string>
    <string name="play_header_step"> "Step %1$s"</string>
    <string name="play_header_intro"> "Intro"</string>
    <string name="play_header_error"> "No recipe"</string>
    <string name="play_body_text"> "Description: %1$s"</string>
    <string name="play_body_empty"> "No description"</string>
    <string name="play_header_empty"> "\u2014"</string>
...
    <string name="pref_show_warnings_label">Show warnings</string>

    <string name="pref_reload_time_key">pref_load_time_key</string>
    <string name="pref_reload_delay_key">pref_load_delay_key</string>

    <!--test-->
    <string name="test_message_error">Recipe database is empty, connect device
 to the Internet, run application to load data, then run test</string>
    <string name="test_message_recipe">Recipe data empty</string>
    <string name="test_message_steps">Recipe Steps data empty</string>
    <string name="test_message_ingredients">Recipe ingredients data empty</string>
    <string name="test_message_portrait">This test for Portrait Mode Only</string>
    <string name="test_message_landscape">This test for Landscape Mode Only</string>

</resources>


