<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fc_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackLight"
    android:layout_marginTop="@dimen/navigation_margin"
    android:layout_marginBottom="@dimen/bottom_tablet_margin"
    android:clickable="true"
    >


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"


        />

    <FrameLayout
        android:id="@+id/fp_video_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

        <ImageView
            android:id="@+id/ic_play_button_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.0"
            android:src="@drawable/cakes_020" />

        <ImageView
            android:id="@+id/ic_play_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_play_button_24dp" />


    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/fp_text_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/colorBackPlay"
        app:layout_constraintBottom_toTopOf="@+id/fp_navigation_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_one">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fc_recycler_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fp_head_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextHead"
                tools:text="HEADER" />

            <TextView
                android:id="@+id/fp_body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextNormal"
                tools:text="Normal text" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/fp_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"

        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <FrameLayout
            android:id="@+id/prev_button_extended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="64dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:src="@drawable/ic_skip_prev_white_24dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/navigation_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Step 1"
            android:textAppearance="@style/TextHead" />

        <FrameLayout
            android:id="@+id/next_button_extended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true"

            >

            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:src="@drawable/ic_skip_next_white_24dp"

                />
        </FrameLayout>

    </LinearLayout>


    <android.support.constraint.Guideline
        android:id="@+id/horizontal_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"


        />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"


        />


</android.support.constraint.ConstraintLayout>